/*
 * $Id: ChangeLog,v 1.658 2010-07-25 21:38:00 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2010-07-25 16:37 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_scroll.prg
    ! Fixed SCROLLBAR painting update for MinGW.
      By Fernando Yurisich.

2010-07-19 19:38 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/c_dialogs.c
  * source/h_dialogs.h
    + Added 6th parameter to GETFILE(), for select default file name.

2010-07-06 22:28 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_form.prg
  * source/h_tab.prg
  * source/h_windows.prg
    ! Fixed ::RefreshData() execution for controls inside any
      container.
  * source/h_grid.prg
    ! Fixed COLUMNWHEN default value.

2010-07-06 16:32 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_combo.prg
    * If VALUESOURCE is array, it's used as "value source" for
      each value.
  * source/h_grid.prg
    * Use VALUESOURCE clause.
  * include/oohg.h
    ! Added "ltoa" to patched MSVC warnings.
  * source/c_dialogs.c
  * source/h_dialogs.h
    + Added 5th parameter to PUTFILE(), for select default file name.

2010-06-24 19:46 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg
    * Added optional second array to COMBOBOX COLUMNCONTROL type.
      It can contain a referenced value corresponding to each
      item.
  * source/h_combo.prg
    * Formatting.
  * source/h_progressmeter.prg
    ! Type cast.
  * source/c_activex.c
    ! Operator priority check.

2010-06-19 18:49 UTC-0500 Ciro Vargas C. <cvc@oohg.org>
  * source/h_print.prg
    ! trying to fix issue with 2 dialogs when print preview.
  * source/winprint.prg
    ! fixed problem in draw text borrowed from HMG extended.

2010-06-16 21:00 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_grid.prg