@@ -1,11 +1,19 @@
 /*
- * $Id: ChangeLog,v 1.658 2010-07-25 21:38:00 guerra000 Exp $
+ * $Id: ChangeLog,v 1.659 2010-08-12 23:07:54 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2010-08-12 18:10 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
+  * source/h_grid.prg
+    ! Fixed ITEM value for items out of range.
+  * image/c_image.c
+    ! Some type casting.
+  * source/makelib_vc.bat
+    ! Sets warning 3 for C compilation.
 
 2010-07-25 16:37 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_scroll.prg
